change from maven-assembly to maven-shade

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ jsbml.log
 
 met4j-core/src/main/java/fr/inra/toulouse/metexplore/met4j_core/Test\.java
 /met4j-toolbox/src/main/java/fr/inrae/toulouse/metexplore/met4j_toolbox/sandbox/
+
+
+dependency-reduced-pom.xml
