add lombok NonNull constraint to method parameters

--- a/pom.xml
+++ b/pom.xml
@@ -184,5 +184,11 @@
             <version>3.0.0</version>
             <type>maven-plugin</type>
         </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.22</version>
+                <scope>provided</scope>
+            </dependency>
     </dependencies>
 </project>
