--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,10 @@
-image: maven:3.6-adoptopenjdk-14
+
+
+stages:
+  - build
+  - test
+  - deploy
+  - singularity
 
 variables:
   MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
@@ -9,17 +15,20 @@ cache:
     - .m2/repository/
 
 build:
+  image: maven:3.6-adoptopenjdk-14
   stage: build
   script:
     - mvn compile
 
 test:
+  image: maven:3.6-adoptopenjdk-14
   stage: test
   script:
     - mvn clean test
     - cat coverage/target/site/jacoco-aggregate/index.html | grep -o '<tfoot>.*</tfoot>'
 
 deploySnapshot:
+  image: maven:3.6-adoptopenjdk-14
   stage: deploy
   script:
     - mvn $MAVEN_CLI_OPTS deploy -Dmaven.test.skip=true
@@ -27,6 +36,7 @@ deploySnapshot:
     - develop
 
 deployCentral:
+  image: maven:3.6-adoptopenjdk-14
   stage: deploy
   before_script:
     - 'which ssh-agent || ( apt-get update -qy && apt-get install openssh-client -qqy )'
@@ -47,3 +57,14 @@ deployCentral:
     - mvn $MAVEN_CLI_OPTS release:perform -Darguments=-Dgpg.passphrase=${GPG_PASSPHRASE} -DlocalCheckout=true
   only:
     - master
+
+buildSingularity:
+  stage: singularity
+  image:
+    name: quay.io/singularity/singularity:v3.4.0
+    entrypoint: [ "" ]
+  script:
+    - singularity build met4j-toolbox.sif met4j.singularity
+    - singularity push --docker-username "${CI_REGISTRY_USER}" --docker-password "${CI_REGISTRY_PASSWORD}" met4j-toolbox.sif oras://"$CI_REGISTRY_IMAGE"/met4j-singularity:"$CI_COMMIT_TAG"
+  when: manual
+
