--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,13 @@ stages:
   - build
   - test
   - deploy
-  - singularity
+  - build-containers
+
+.template_docker:
+  stage: build-containers
+  image: docker:latest
+  services:
+    - docker:dind
 
 variables:
   MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
@@ -59,12 +65,45 @@ deployCentral:
     - master
 
 buildSingularity:
-  stage: singularity
+  stage: build-containers
   image:
     name: quay.io/singularity/singularity:v3.4.0
     entrypoint: [ "" ]
   script:
     - singularity build met4j-toolbox.sif met4j.singularity
     - singularity push --docker-username "${CI_REGISTRY_USER}" --docker-password "${CI_REGISTRY_PASSWORD}" met4j-toolbox.sif oras://"$CI_REGISTRY_IMAGE"/met4j-singularity:"$CI_COMMIT_TAG"
-  when: manual
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: always
+    - if: $CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH
+      when: manual
+
+buildDockerProdGitlab:
+  extends: .template_docker
+  before_script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  script:
+    - docker build -t "$CI_REGISTRY/metexplore/met4j/met4j-docker:latest" .
+    - docker push "$CI_REGISTRY/metexplore/met4j/met4j-docker:latest"
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: always
+    - if: $CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH
+      when: manual
+
+buildDockerProdDockerhub:
+  extends: .template_docker
+  before_script:
+    - docker login -u "$DOCKERHUB_USER" -p "$DOCKERHUB_PASSWORD" $DOCKERHUB_REGISTRY
+  script:
+    - docker build --pull -t "$DOCKERHUB_IMAGE:latest" .
+    - docker push "$DOCKERHUB_IMAGE:latest"
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: always
+    - if: $CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH
+      when: manual
+
+
+
 
