--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,8 +78,10 @@ test:
     - find . -name "*.class" -exec touch {} \+
     - mvn $MAVEN_OPTS clean test
     - cat coverage/target/site/jacoco-aggregate/index.html | grep -o '<tfoot>.*</tfoot>'
+  coverage: '/Total.*?([0-9]{1,3})%/'
   tags:
     - stable
+  
 
 package:
   image: maven:3.6-adoptopenjdk-14
