--- a/met4j-mapping/pom.xml
+++ b/met4j-mapping/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.8</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
