--- a/met4j-graph/pom.xml
+++ b/met4j-graph/pom.xml
@@ -25,6 +25,7 @@
             <groupId>org.jgrapht</groupId>
             <artifactId>jgrapht-core</artifactId>
             <version>1.5.0</version>
+            <!--memo: once 1.5.2 is available, remove quick-fix in graph.connect.ShortestPath$getShortestPathsUnionList-->
         </dependency>
         <dependency>
             <groupId>org.jgrapht</groupId>
