--- a/met4j-core/pom.xml
+++ b/met4j-core/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>fr.inrae.toulouse.metexplore</groupId>
     <artifactId>met4j</artifactId>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.4.0</version>
   </parent>
 
     <scm>
