--- a/met4j-toolbox/pom.xml
+++ b/met4j-toolbox/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>hibernate-validator</artifactId>
             <version>8.0.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>4.0.0-alpha-8</version>
+        </dependency>
     </dependencies>
 
     <description>Bundle of all met4j modules and api</description>
@@ -121,14 +126,14 @@
                     <dependency>
                         <groupId>com.github.edwgiz</groupId>
                         <artifactId>maven-shade-plugin.log4j2-cachefile-transformer</artifactId>
-                        <version>2.6.1</version>
+                        <version>2.6.2</version>
                     </dependency>
                 </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>
+                <version>0.8.11</version>
                 <executions>
                     <!-- to avoid bugs in some situations -->
                     <execution>
