--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,12 +53,18 @@ build:
   script:
     - mvn $MAVEN_OPTS compile
     - TRUEVERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+    - echo "TRUEVERSION:$TRUEVERSION"
     - VERSION=$TRUEVERSION
+    - echo "VERSION:$VERSION"
     - if [ "$CI_COMMIT_BRANCH" = "master" ]; then VERSION=${VERSION%"-SNAPSHOT"}; fi
+    - echo "VERSION:$VERSION"
     - LOWER_CASE_VERSION=${VERSION,,}
+    - echo "LOWER_CASE_VERSION:$LOWER_CASE_VERSION"
     # Replace / by _ in the name of the commit
     - FORMATTED_COMMIT_BRANCH=${CI_COMMIT_BRANCH//\//_}
+    - echo "FORMATTED_COMMIT_BRANCH:$FORMATTED_COMMIT_BRANCH"
     - LOWER_CASE_COMMIT_BRANCH=${FORMATTED_COMMIT_BRANCH,,}
+    - echo "LOWER_CASE_COMMIT_BRANCH:$LOWER_CASE_COMMIT_BRANCH"
     - echo "VERSION=$VERSION" >> build.env
     - echo "TRUEVERSION=$TRUEVERSION" >> build.env
     - echo "FORMATTED_COMMIT_BRANCH=$FORMATTED_COMMIT_BRANCH" >> build.env
