--- a/met4j-graph/pom.xml
+++ b/met4j-graph/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>met4j-chemUtils</artifactId>
             <version>1.5.5-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
