--- a/met4j-io/pom.xml
+++ b/met4j-io/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>fr.inrae.toulouse.metexplore</groupId>
         <artifactId>met4j</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>-SNAPSHOT</version>
     </parent>
 
     <artifactId>met4j-io</artifactId>
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>fr.inrae.toulouse.metexplore</groupId>
             <artifactId>met4j-core</artifactId>
-            <version>2.0.1-SNAPSHOT</version>
+            <version>-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.sbml.jsbml</groupId>
