--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>fr.inrae.toulouse.metexplore</groupId>
     <artifactId>met4j</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>met4j</name>
