--- a/met4j-chemUtils/pom.xml
+++ b/met4j-chemUtils/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>fr.inrae.toulouse.metexplore</groupId>
     <artifactId>met4j</artifactId>
-    <version>-SNAPSHOT</version>
+    <version>2.0.2-SNAPSHOT</version>
   </parent>
 
     <properties>
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>fr.inrae.toulouse.metexplore</groupId>
             <artifactId>met4j-core</artifactId>
-            <version>-SNAPSHOT</version>
+            <version>2.0.2-SNAPSHOT</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
         <dependency>
