--- a/met4j-mathUtils/pom.xml
+++ b/met4j-mathUtils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>fr.inrae.toulouse.metexplore</groupId>
         <artifactId>met4j</artifactId>
-        <version>-SNAPSHOT</version>
+        <version>2.0.2-SNAPSHOT</version>
     </parent>
 
 
