--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -141,6 +141,8 @@ deploySnapshot:
   image: eclipse-temurin:17.0.12_7-jdk
   stage: deploy
   before_script:
+    - echo "GPG_PRIVATE_KEY is set to: $GPG_PRIVATE_KEY"
+    - echo "GPG_PASSPHRASE is set to: $GPG_PASSPHRASE"
     - apt-get update && apt-get install -y maven git
     - 'which ssh-agent || ( apt-get update -qy && apt-get install openssh-client -qqy )'
     - 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client -y )'
@@ -155,9 +157,6 @@ deploySnapshot:
     - git config --global user.email "$env:GITLAB_USER_EMAIL"
     - git config --global user.name "$env:GITLAB_USER_NAME"
     - git checkout -B "$CI_COMMIT_REF_NAME"
-  script:
-    - mvn $MAVEN_CLI_OPTS release:prepare -DautoVersionSubmodules=true -Dmaven.test.skip=true -DscmCommentPrefix="[skip ci]" -DupdateWorkingCopyVersions=false -DpushChanges=false -DskipTests
-    - mvn $MAVEN_CLI_OPTS release:perform -Darguments=-Dgpg.passphrase=${GPG_PASSPHRASE} -DlocalCheckout=true -DskipTests -Dmaven.test.skip=true
   tags:
     - stable
 
