--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -141,8 +141,8 @@ deploySnapshot:
   image: eclipse-temurin:17.0.12_7-jdk
   stage: deploy
   before_script:
-    - echo "GPG_PRIVATE_KEY is set to:$GPG_PRIVATE_KEY"
-    - echo "GPG_PRIVATE_KEY is set to:$GPG_PRIVATE_KEY"
+    - echo "GPG_PRIVATE_KEY is set to:${GPG_PRIVATE_KEY}"
+    - echo "GPG_PASSPHRASE is set to:${GPG_PASSPHRASE}"
     - apt-get update && apt-get install -y maven git
     - 'which ssh-agent || ( apt-get update -qy && apt-get install openssh-client -qqy )'
     - 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client -y )'
