comment rules in deployCentralSnapshot for tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -156,8 +156,8 @@ deployCentralSnapshot:
       -DskipTests \
       -Dmaven.test.skip=true \
       -e -X
-  only:
-    - develop
+#  only:
+#    - develop
   tags:
     - stable
 
