--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -152,10 +152,7 @@ deployCentralSnapshot:
   extends: .template_deployCentral
   script:
     # Deploy snapshots only, skip release plugin
-    - mvn $MAVEN_CLI_OPTS clean deploy \
-      -DskipTests \
-      -Dmaven.test.skip=true \
-      -e -X
+    - mvn $MAVEN_CLI_OPTS clean deploy -DskipTests -Dmaven.test.skip=true -e -X
 #  only:
 #    - develop
   tags:
