Feature/integration tests migration
IT was run through planemo at Galaxy integration step, last refactoring now push met4j uber-jar to bioconda, prior to Galaxy integration, we can't test apps before pushing to bioconda. The proposed merge request add the integration tests within the project, and will be run through maven

--- a/met4j-toolbox/pom.xml
+++ b/met4j-toolbox/pom.xml
@@ -80,6 +80,13 @@
     <description>Bundle of all met4j modules and api</description>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -162,6 +169,25 @@
                         <argument>README.md</argument>
                     </arguments>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.1.2</version>
+                <executions>
+                    <execution>
+                        <id>integration-tests</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>**/integration/**/*IT.java</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
